<resources>
    <string name="app_name">Krushi Sarthi</string>
    <string name="login">Login</string>
    <string name="welcome_to">Welcome to</string>
    <string name="krushi_sarthi">KRUSHI SARTHI</string>
    <string name="sign_up">Sign_up</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">PROFILE</string>
    <string name="prof">TODO</string>
    <string name="profile1">Profile</string>
    <string name="bjri">Blocks of earlier crops, garnished with stalks, should clean the soil.Prior to the dynasty, mix 2.5 to 3 tons (5 to 6 bullock pumps) in the field of compost or compost, and in the second frost it should be mixed well in the soil.
        \n\n<b>Sowing:</b> After sowing of summer season of bajra, it is worthwhile in the second fortnight of January to fall in the first fortnight of February.
        If the temperature drops below 10 degrees Celsius, then it is susceptible to damage. If the duration of the sowing is delayed, then the crop comes in flowering after 50 to 55 days of age. If the temperature is higher than 42 degrees C and pollen is likely to die and the production is likely to decrease. Also, late harvesting of the kharif season is delayed due to the delay in summer harvesting.
        \n\n<b>Seed treatment:</b> Use of certified seeds of 1.2 to 1.6 kg per acre. If seeded processed seed is not available, seed should be processed with 20% salt solution (2 kg of salt in 10 liters of water) before sowing for seed disease. Release the seeds of millet in this solution. Drain the fungalized light seeds on the water. Separately, the seeds remaining under the bottom and heavy weight should be washed 2 to 3 times and then dry them in the shade.
        For preventing the prevention of Gosavi disease, seed treatment should be processed in this quantity of seeds in the shade of Metallaxil (35 sd) 6 gm. After chemical processing, the seeds should be processed with zospirillium and phosphorus bacteria for 25 g / kg of each. By 20% savings of nitrogen and phosphorus, 10% increase in production due to the bacterial conservation process. Gravity is uniform and the initial growth of PK is good
        \n\n<b>Sowing:</b> After sowing, after sowing, after sowing, sowing should be done. The distance between the two lines is 30 cm And the difference between two plants is 15 cm Keep it Prepare a flat vapor for 5 to 7 meters long and 3 to 4 meter wide, depending on the land slope. Do it by two wheels, ie fertilizers and seeds can be sown at the same time. Sowing 2 to 3 cm Do not do it at more than the room.
        \n\n<b>Fertilizer Management:</b> At the time of sowing, give 18 kg of nitrogen (39 kg urea), 18 kg of phosphorus (112 kg single super phosphate) and 18 kg potash (30 kg of mutant of potash) per acre. Similarly, after 25 to 30 days after sowing, the second installment should be given to 18 kg of nitrogen (39 kg urea).
        \n\n<b>Cropping:</b> To maintain the correct number of single seedlings, the first rinse should be done after 10 days of sowing and after second sowing, 20 days after sowing, the difference between two plants is 15cm. Keep it 48,000 seedlings per acre are live
        \n\n<b>Inter-school:</b> It is necessary to keep the weeds free from the beginning of 30 days of sowing, because there is competition for getting air, water, nutrients and sunlight between weeds and crops during this period. It is weeding twice and two times according to need. If there is a shortage of labor, then 400 gm of acid per hectare mixed in 200 liters of water per acre, but after sowing, it should be sprayed on ground before planting and weeding in 25-30 days after sowing.
        \n\n<b>Water Management:</b> After 3 to 4 days after sowing, lightly give the first water (mango). After this, according to the condition of the land, in the sensitive condition of the crop, it should be given 5 to 6 water shifts at intervals of 10 to 12 days. If the availability of water is limited, the first stage should be given at the time of arrival of water (20 to 25 days after sowing), second water in the crop area (35 to 45 days after sowing) and third feeding of the grains (60 to 65 days after sowing)
        \n\n<b>Harvesting and production:</b> In the initial phase of crop during the summer season, the growth of the crop is slow due to the low gravity of the sprouting. Therefore it takes more time for the growth of the crop, so summer harvesting season is late 10-15 days after the bajra. The use of summer biscuits hybrid or improved varieties, proper balance sheet and water management, yields up to 14 to 16 quintals per acre. It also provides fodder for milch animals and other animals.\n
    </string>
    <string name="jawari"><b>How to choose varieties of sorghum?</b>\n
        Kharif season is a rainy season. Often, the crop rains when the crop is matured. It affects the crop. As a result, sorghum grows in the jowar and the jowar becomes black. Income also decreases in yield due to increasing production. For this, the varieties used for the Parbhani Shivalata (PVK 801) and Twin Useful Plant PVK 809 for Vardharao Naik Marathwada Agricultural University, Parbhani are used for cultivation.
        Sowing period For the second week of June and the first week of July, it is the perfect period for jawar cultivation. If the duration of the lengthening is delayed then the incidence of cholera increases.Proof of seed
        Hectare 7.5 kg for hybrid sorghum and 10 kg seed of hectare for improved air use.
        \n\n<b>Seed Procedure:</b>\nSeed treatment of Azotobacter bacteria enhancer, nitrogen and phosphorous lymph bacteria, 250 gm per 8-10 kg seed.
        "If delayed planting, prevention of incidence of throat disease, thymathoxemm (70%) should process seed according to 3g / kg Manure Management"
        "Hectury should be well mixed in 5 tons of manure soil. Kharif sorghum is recommended for 80 kg of nitrogen, 40 kg of phosphorus and 40 kg potash per head. Of these, you should give half the nitrogen, complete phosphorus and full potash while sowing. Most likely, the first quantity should be mixed or mixed (150 kg 10-26-26 grams and 50 kg urea). The remaining half-nitrates should be given at 85 kg urea after 30 to 35 days after sowing. Fertilizers should be 5 cm below the seed during sowing. Give it"
        \n\n<b>Inter-school:</b>\nIt is 8-10 days after sowing, it should be filled. 20 cm in 15 days At the distance there is a rape like 1 rope. To handle weeds, weeding twice and two times till crop 40-45 days.
        \n\n<b>Peak protection:</b>\nTo control the debris, spraying of syrupmethrin (10% fluid) in 20 ml per 10 liters of water and after 14 days of sowing, it should be sprayed.
        \n\n<b>Harvesting and Storage:</b>\nHarvest the crop in mature state. Due to having 8% humidity in the grain, it should be stored in dry form. Make a gourd to cook it
    </string>
    <string name="corn"><b>Introduction:</b>
        Rabbi season is the winter … How to make rabbit maize rabbit during this winter season? It is necessary to know this. For rabi corn crops, it is necessary to select medium-to-heavy fertile, well-drained land. The soil in which the organic content is high is suitable for cultivation of land. Generally, the land mass should be between 6.5 to 7.5. Maize crops are also grown in diverse weather conditions.Therefore, corn may be planted at a height of 2700 meters above sea level, but fog may be more prone to corn crops.
        \n\n<b>What is the right temperature for maize?</b>
During rabi season there is an increase in the temperature, so there is a decrease in temperature. But, for the corn crop, the average 18 to 20 degrees. Temperatures can be fruitful.
During the Rabi season the temperature of the night is mild and decreases the decrease in the amount of light decreased due to light, respiratory failure.
Also, the process of photosynthesis becomes faster and faster due to the length, width, structure of the leaf and the intense sunlight for 7-8 hours, which increases the product by increasing the duration of the crop.
\n\n<b>How Important Is Water Management?</b>
Rabi season can be said to be less humid because the dew falls on the night due to cold.
Due to mild temperatures and low humidity in the rabi season, the incidence of diseases and pests is very less.
In the rabi season the plant number can be kept in the proper quantity due to land and water management, as well as lower incidence of diseases and pests.
If the weeds get proper control, the effectiveness of the chemical fertilizers used will increase.
\n\n<b>How to sow?</b>
In rabi season, sowing of maize under 60 cm in the bag, at half the height of half an inch, in between 18 to 20 cm, two seeds four to five cm. Do it by biting deep.
If the sowing is done on the south side of the sari, the sunlight germination becomes better and the growth of the crops is strong.
If it is planned in the sowing, it will get about 90,000 seedlings per hectare and result in higher yields.
\n\n<b>What care should be taken to control disease?
</b>
Before sowing, two to two and a half grams of thyroid juice is controlled by fungicide per kg of seeds.
Also, if the Azotobacter bacterial breeding grows 15 grams per kilogram of seeds, then there will be five percent increase in production.
\n\n<b>How to use fertilizers?</b>

Chemical fertilization is used during sowing.
At the time of sowing, the chemical fertilizers should be mixed in 5 to 7 cm area and soil well.
Once the harvest is successful, then in the vertical peak, the nitrogen fertilizer (urea) is 10-12 cm. Give it away from the line and give it water immediately.
Water should be given at an interval of 10 to 12 days according to the condition of the soil.
After plucking maize after ten days, keep a single vigorous rope on a four foot


    </string>
    <string name="pieon">

    </string>
    <string name="email_subject">email_subject</string>
    <string name="email_body">email_body</string>
    <string name="send_to">send_to</string>
    <string name="send_email">send_email</string>
    <string name="topbg">topbg</string>
</resources>