<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_activity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/topgb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/topbg">

    </ImageView>

    <Button
        android:id="@+id/profile"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginTop="4dp"
        android:onClick="btnprof"
        android:text="@string/profile1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:layout_width="115dp"
        android:layout_height="82dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/prof"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/waju" />

    <TextView
        android:id="@+id/username"
        android:layout_width="126dp"
        android:layout_height="28dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="Hello, User 😀"
        android:textColor="#263238"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="172dp"
        app:cardBackgroundColor="#575958"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="99dp"
            android:layout_height="96dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/whether"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#575958"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="98dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="17dp"
            app:srcCompat="@drawable/fertilizer"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#575958"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="82dp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="20dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/help"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#575958"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="96dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/plant" />


        <TextView
            android:id="@+id/plants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="90dp"
            android:fontFamily="sans-serif-black"
            android:text="plants"
            android:textColor="#0E0E0E"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#575958"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="98dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/track"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:onClick="btnplantinfo"
        app:cardBackgroundColor="#575958"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/infologo"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

